docs(readme): convert file format to adoc

--- a/README.adoc
+++ b/README.adoc
@@ -1,21 +1,20 @@
-Spring Data for Meilisearch
-===========================
+= Spring Data for Meilisearch
 
-[![Maven Central](https://img.shields.io/maven-central/v/io.vanslog/spring-data-meilisearch.svg?label=Maven%20Central)](https://central.sonatype.com/artifact/io.vanslog/spring-data-meilisearch/)
-[![Maintainability Rating](https://sonarcloud.io/api/project_badges/measure?project=spring-data-meilisearch&metric=sqale_rating)](https://sonarcloud.io/summary/new_code?id=spring-data-meilisearch)
-[![Coverage](https://sonarcloud.io/api/project_badges/measure?project=spring-data-meilisearch&metric=coverage)](https://sonarcloud.io/summary/new_code?id=spring-data-meilisearch)
-![LICENSE](https://img.shields.io/github/license/junghoon-vans/spring-data-meilisearch?label=License)
-
+image:https://img.shields.io/maven-central/v/io.vanslog/spring-data-meilisearch.svg?label=Maven%20Central[Maven Central, link=https://central.sonatype.com/artifact/io.vanslog/spring-data-meilisearch/]
+image:https://sonarcloud.io/api/project_badges/measure?project=spring-data-meilisearch&metric=sqale_rating[Maintainability Rating, link=https://sonarcloud.io/summary/new_code?id=spring-data-meilisearch]
+image:https://sonarcloud.io/api/project_badges/measure?project=spring-data-meilisearch&metric=coverage[Coverage, link=https://sonarcloud.io/summary/new_code?id=spring-data-meilisearch]
+image:https://img.shields.io/github/license/junghoon-vans/spring-data-meilisearch?label=License[License, link=LICENSE]
 
 Spring Data Implementation for Meilisearch
 
-## Client Configuration
+== Client Configuration
 
 This library support using Java based `@Configuration` or XML Namespace for configuring the Meilisearch Client.
 
-### Annotation based configuration
+=== Annotation based configuration
 
-```java
+[source,java]
+----
 
 @Configuration
 public class CustomConfiguration extends MeilisearchConfiguration {
@@ -29,11 +28,12 @@ public class CustomConfiguration extends MeilisearchConfiguration {
         .build();
   }
 }
-```
+----
 
-### Namespace based configuration
+=== Namespace based configuration
 
-```xml
+[source,xml]
+----
 <?xml version="1.0" encoding="UTF-8"?>
 <beans xmlns="http://www.springframework.org/schema/beans"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -44,14 +44,15 @@ public class CustomConfiguration extends MeilisearchConfiguration {
   <meilisearch:meilisearch-client id="meilisearchClient"
     api-key="masterKey" json-handler="GSON"/>
 </beans>
-```
+----
 
-## Document Definition
+== Document Definition
 
-To define the [Document](https://www.meilisearch.com/docs/learn/core_concepts/documents), you need to annotate a class with `@Document` annotation.
+To define the https://www.meilisearch.com/docs/learn/core_concepts/documents[Document], you need to annotate a class with `@Document` annotation.
 As an example, the following class defines a `Movie` document with `id`, `title`, `description` and `genres` fields.
 
-```java
+[source,java]
+----
 @Document(indexUid = "movies")
 public class Movie {
   @Id
@@ -60,14 +61,14 @@ public class Movie {
   private String description;
   private String[] genres;
 }
-```
+----
 
-### Index UID
+=== Index UID
 
-The [Index UID](https://www.meilisearch.com/docs/learn/core_concepts/indexes#index-uid) is a unique identifier for an index.
+The https://www.meilisearch.com/docs/learn/core_concepts/indexes#index-uid[Index UID] is a unique identifier for an index.
 It must be defined for each document with `@Document` annotation.
 
-### Document id
+=== Document id
 
-The [Document id](https://www.meilisearch.com/docs/learn/core_concepts/primary_key#document-id) is a unique identifier for a document in an index.
+The https://www.meilisearch.com/docs/learn/core_concepts/primary_key#document-id[Document id] is a unique identifier for a document in an index.
 It can be defined with `@Id` annotation or `id` field.
