--- a/README.adoc
+++ b/README.adoc
@@ -5,6 +5,88 @@ image:https://sonarcloud.io/api/project_badges/measure?project=spring-data-meili
 image:https://sonarcloud.io/api/project_badges/measure?project=spring-data-meilisearch&metric=coverage[Coverage, link=https://sonarcloud.io/summary/new_code?id=spring-data-meilisearch]
 image:https://img.shields.io/github/license/junghoon-vans/spring-data-meilisearch?label=License[License, link=LICENSE]
 
+The Spring Data Meilisearch project provides integration with the Meilisearch search engine.
+
+== Features
+
+* Spring Configuration support using Java based `@Configuration` classes or an XML namespace for the Meilisearch client.
+* Implementation of CRUD methods for Meilisearch Documents.
+
+== Getting Started
+
+Here is a quick teaser of an application using Spring Data Repositories in Java:
+
+[source,java]
+----
+public interface MovieRepository extends MeilisearchRepository<Movie, Integer> { }
+
+@Service
+public class MyService {
+
+    @Autowired private MovieRepository repository;
+
+    public void doWork(Movie movie) {
+        repository.save(movie);
+    }
+}
+
+@Configuration
+@EnableMeilisearchRepositories
+public class Config extends MeilisearchConfiguration {
+
+    @Override
+        public ClientConfiguration clientConfiguration() {
+            return ClientConfiguration.builder()
+                    .connectedToLocalhost()
+                    .withApiKey("masterKey")
+                    .build();
+        }
+}
+----
+
+=== Maven configuration
+
+Add the Maven dependency:
+
+[source,xml]
+----
+<dependency>
+  <groupId>io.vanslog</groupId>
+  <artifactId>spring-data-meilisearch</artifactId>
+  <version>${version}</version>
+</dependency>
+----
+
 == Guide
 
 * Check the link:src/main/asciidoc/Index.adoc[reference documentation]
+
+== Reporting Issues
+
+Spring Data uses GitHub as issue tracking system to record bugs and feature requests.
+If you want to raise an issue, please follow the recommendations below:
+
+* Before you log a bug, please search the
+https://github.com/junghoon-vans/spring-data-meilisearch/issues[issue tracker] to see if someone has already reported the problem.
+* If the issue doesn’t already exist, https://github.com/junghoon-vans/spring-data-meilisearch/issues/new[create a new issue].
+* Please provide as much information as possible with the issue report, we like to know the version of Spring Data Meilisearch that you are using and JVM version.
+* If you need to paste code, or include a stack trace format it as code using triple backtick.
+* If possible try to create a test-case or project that replicates the issue.
+Attach a link to your code or a compressed file containing your code.
+
+== Building from Source
+
+Spring Data can be easily built with the https://github.com/takari/maven-wrapper[maven wrapper]. You also need JDK 17 or above.
+
+[source,bash]
+----
+ $ ./mvnw clean install
+----
+
+If you want to build with the regular `mvn` command, you will need https://maven.apache.org/run-maven/index.html[Maven v3.5.0 or above].
+
+_Also see link:CONTRIBUTING.adoc[CONTRIBUTING.adoc] if you wish to submit pull requests._
+
+== License
+
+Spring Data Meilisearch is Open Source software released under the https://www.apache.org/licenses/LICENSE-2.0.html[Apache 2.0 license].
