--- a/README.adoc
+++ b/README.adoc
@@ -5,107 +5,88 @@ image:https://sonarcloud.io/api/project_badges/measure?project=spring-data-meili
 image:https://sonarcloud.io/api/project_badges/measure?project=spring-data-meilisearch&metric=coverage[Coverage, link=https://sonarcloud.io/summary/new_code?id=spring-data-meilisearch]
 image:https://img.shields.io/github/license/junghoon-vans/spring-data-meilisearch?label=License[License, link=LICENSE]
 
-Spring Data Implementation for Meilisearch
+The Spring Data Meilisearch project provides integration with the Meilisearch search engine.
 
-== Client Configuration
+== Features
 
-This library support using Java based `@Configuration` or XML Namespace for configuring the Meilisearch Client.
+* Spring Configuration support using Java based `@Configuration` classes or an XML namespace for the Meilisearch client.
+* Implementation of CRUD methods for Meilisearch Documents.
 
-The elements in the configuration are:
+== Getting Started
 
-* `host URL`: The Meilisearch host URL
-* `API Key`: The Meilisearch API Key
-* `Client Agents`: The `User-Agent` header for the Meilisearch Client
-
-=== Annotation based configuration
+Here is a quick teaser of an application using Spring Data Repositories in Java:
 
 [source,java]
 ----
+public interface MovieRepository extends MeilisearchRepository<Movie, Integer> { }
+
+@Service
+public class MyService {
+
+    @Autowired private MovieRepository repository;
+
+    public void doWork(Movie movie) {
+        repository.save(movie);
+    }
+}
 
 @Configuration
-public class CustomConfiguration extends MeilisearchConfiguration {
+@EnableMeilisearchRepositories
+public class Config extends MeilisearchConfiguration {
 
     @Override
-    public ClientConfiguration clientConfiguration() {
-        return ClientConfiguration.builder()
-                .connectedToLocalhost()
-                .withApiKey("masterKey")
-                .build();
-    }
+        public ClientConfiguration clientConfiguration() {
+            return ClientConfiguration.builder()
+                    .connectedToLocalhost()
+                    .withApiKey("masterKey")
+                    .build();
+        }
 }
 ----
 
-The `host URL` and `API Key` are required configuration.
+=== Maven configuration
 
-=== Namespace based configuration
+Add the Maven dependency:
 
 [source,xml]
 ----
-<meilisearch:meilisearch-client id="meilisearchClient" api-key="masterKey"/>
+<dependency>
+  <groupId>io.vanslog</groupId>
+  <artifactId>spring-data-meilisearch</artifactId>
+  <version>${version}</version>
+</dependency>
 ----
 
-The `API Key` is required configuration.
-The Host URL is set to `http://localhost:7700` unless otherwise specified.
+== Guide
 
-please refer to the link:src/test/resources/io/vanslog/spring/data/meilisearch/config/namespace.xml[example configuration] in test resources.
+* Check the link:src/main/asciidoc/Index.adoc[reference documentation]
 
-== JSON Handler
+== Reporting Issues
 
-The `JSON Handler` is used to serialize and deserialize the JSON data.
+Spring Data uses GitHub as issue tracking system to record bugs and feature requests.
+If you want to raise an issue, please follow the recommendations below:
 
-The following JSON Handlers are supported:
+* Before you log a bug, please search the
+https://github.com/junghoon-vans/spring-data-meilisearch/issues[issue tracker] to see if someone has already reported the problem.
+* If the issue doesn’t already exist, https://github.com/junghoon-vans/spring-data-meilisearch/issues/new[create a new issue].
+* Please provide as much information as possible with the issue report, we like to know the version of Spring Data Meilisearch that you are using and JVM version.
+* If you need to paste code, or include a stack trace format it as code using triple backtick.
+* If possible try to create a test-case or project that replicates the issue.
+Attach a link to your code or a compressed file containing your code.
 
-* `com.meilisearch.sdk.json.GsonJsonHandler`
-* `com.meilisearch.sdk.json.JacksonJsonHandler`
+== Building from Source
 
-=== Annotation based configuration
+Spring Data can be easily built with the https://github.com/takari/maven-wrapper[maven wrapper]. You also need JDK 17 or above.
 
-[source,java]
+[source,bash]
 ----
-public class CustomConfiguration extends MeilisearchConfiguration {
-
-    @Override
-    public JsonHandler jsonHandler() {
-        return new JacksonJsonHandler();
-    }
-}
-----
-
-The default JSON Handler is `GsonJsonHandler`.
-You can use other JSON Handler by overriding the `jsonHandler()` method.
-
-=== Namespace based configuration
-
-[source,xml]
-----
-<bean id="jsonHandler" class="com.meilisearch.sdk.json.GsonJsonHandler"/>
+ $ ./mvnw clean install
 ----
 
-The default JSON Handler is not provided by the XML Namespace.
-JSON Handler must be defined as a bean with `id="jsonHandler"`.
+If you want to build with the regular `mvn` command, you will need https://maven.apache.org/run-maven/index.html[Maven v3.5.0 or above].
 
-== Document Definition
+_Also see link:CONTRIBUTING.adoc[CONTRIBUTING.adoc] if you wish to submit pull requests._
 
-To define the https://www.meilisearch.com/docs/learn/core_concepts/documents[Document], you need to annotate a class with `@Document` annotation.
-As an example, the following class defines a `Movie` document with `id`, `title`, `description` and `genres` fields.
+== License
 
-[source,java]
-----
-@Document(indexUid = "movies")
-public class Movie {
-    @Id private int id;
-    private String title;
-    private String description;
-    private String[] genres;
-}
-----
-
-=== Index UID
-
-The https://www.meilisearch.com/docs/learn/core_concepts/indexes#index-uid[Index UID] is a unique identifier for an index.
-It must be defined for each document with `@Document` annotation.
-
-=== Document id
-
-The https://www.meilisearch.com/docs/learn/core_concepts/primary_key#document-id[Document id] is a unique identifier for a document in an index.
-It can be defined with `@Id` annotation or `id` field.
+Spring Data Meilisearch is Open Source software released under the https://www.apache.org/licenses/LICENSE-2.0.html[Apache 2.0 license].
