--- a/src/main/asciidoc/reference/meilisearch-repositories.adoc
+++ b/src/main/asciidoc/reference/meilisearch-repositories.adoc
@@ -18,7 +18,7 @@ import java.util.List;
 
 public class MovieService {
 
-	private MovieRepository repository;
+	private final MovieRepository repository;
 
 	public MovieService(MovieRepository repository) {
 		this.repository = repository;
