Add timeout and interval properties

--- a/src/main/asciidoc/reference/meilisearch-client.adoc
+++ b/src/main/asciidoc/reference/meilisearch-client.adoc
@@ -76,6 +76,8 @@ ClientConfiguration clientConfiguration = ClientConfiguration.builder()
     .connectedTo("http://localhost:7700")                               <.>
     .withApiKey("masterKey")                                            <.>
     .withClientAgents(agents)                                           <.>
+    .withTimeout(5000)                                                  <.>
+    .withInterval(50)                                                   <.>
     .build();
 ----
 
@@ -83,6 +85,8 @@ ClientConfiguration clientConfiguration = ClientConfiguration.builder()
 <.> Use the builder to provide the Meilisearch host URL.
 <.> Set the Meilisearch API Key to use for authentication.
 <.> Set the client agents.
+<.> Set the timeout in milliseconds to wait for a response from Meilisearch.
+<.> Set the interval in milliseconds to wait for a response from Meilisearch.
 ====
 
 [[meilisearch.json-handler]]
