--- a/src/main/asciidoc/reference/meilisearch-client.adoc
+++ b/src/main/asciidoc/reference/meilisearch-client.adoc
@@ -76,6 +76,8 @@ ClientConfiguration clientConfiguration = ClientConfiguration.builder()
     .connectedTo("http://localhost:7700")                               <.>
     .withApiKey("masterKey")                                            <.>
     .withClientAgents(agents)                                           <.>
+    .withRequestTimeout(2000)                                                  <.>
+    .withRequestInterval(20)                                                   <.>
     .build();
 ----
 
@@ -83,6 +85,8 @@ ClientConfiguration clientConfiguration = ClientConfiguration.builder()
 <.> Use the builder to provide the Meilisearch host URL.
 <.> Set the Meilisearch API Key to use for authentication.
 <.> Set the client agents.
+<.> Set the request timeout to 2000 milliseconds.
+<.> Set the request interval to 20 milliseconds.
 ====
 
 [[meilisearch.json-handler]]
