Fix reference documentation about repositories

--- a/src/main/asciidoc/reference/meilisearch-repositories.adoc
+++ b/src/main/asciidoc/reference/meilisearch-repositories.adoc
@@ -102,7 +102,7 @@ The Spring Data Meilisearch repositories can be configured using the `meilisearc
 <.> The `meilisearch:repositories` element enables Meilisearch repositories.
 If no `base-package` is configured, the namespace will scan the package of the configuration file.
 <.> The `meilisearchTemplate` bean must be configured with a `MeilisearchClient`.
-<.> Set the `jsonHandler` bean as the constructor argument of the `meilisearchTemplate`.
+<.> Set the `client` bean as the constructor argument of the `meilisearchTemplate`.
 <.> Configure the Meilisearch client with the `api-key` attribute.
 <.> Configure the `jsonHandler` bean with the `GsonJsonHandler` class.
 ====
