Add meilisearch-settings reference document.

--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -16,3 +16,4 @@ include::preface.adoc[]
 include::reference/meilisearch-client.adoc[]
 include::reference/meilisearch-document.adoc[]
 include::reference/meilisearch-repositories.adoc[]
+include::reference/meilisearch-settings.adoc[]
